@@ -3,6 +3,7 @@ some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
 Changelog for sg3_utils-1.32 [20110510] [svn: r395]
+  - sg_sat_identify: add '--ident' to output WWN
   - sg_raw: exit status corrections
   - sg_decode_sense: add --nospace and --hex options
   - sg_logs: fix bug with large --maxlen
